deal with preprocessor inserted lines anywhere in file

--- a/make.generic.config
+++ b/make.generic.config
@@ -29,7 +29,7 @@ out/$(BENCHMARK)_wasmfx.wasm: $(BENCHMARK).c wasmfx_import.wast
 
 out/wasmfx_fiber_imports.wat: ../vendor/fiber-c/src/wasmfx/imports.wat.pp
 	mkdir -p out
-	$(WASICC) -xc -DWASMFX_CONT_TABLE_INITIAL_CAPACITY=$(WASMFX_CONT_TABLE_INITIAL_CAPACITY) -E ../vendor/fiber-c/src/wasmfx/imports.wat.pp | tail -n+8 > out/wasmfx_fiber_imports.wat
+	$(WASICC) -xc -DWASMFX_CONT_TABLE_INITIAL_CAPACITY=$(WASMFX_CONT_TABLE_INITIAL_CAPACITY) -E ../vendor/fiber-c/src/wasmfx/imports.wat.pp | sed 's/.*#.*//g'   > out/wasmfx_fiber_imports.wat
 
 out/$(BENCHMARK)_wasmfx_fiber.wasm: out/wasmfx_fiber_imports.wat $(BENCHMARK).c
 	mkdir -p out
